# plasm-core

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.cursor/agents/: plasm-api-mapping-designer.md
.cursor/skills/plasm-authoring/: SKILL.md  reference.md
apis/: README.md
apis/github/: README.md  domain.yaml  mappings.yaml
apis/github/eval/: cases.yaml
crates/plasm-agent/: Cargo.toml
crates/plasm-agent-core/: Cargo.toml  README.md
crates/plasm-agent-core/src/: backend_normalize.rs  http.rs  http_discovery.rs  http_execute.rs  http_traces.rs  lib.rs  local_trace_archive.rs  mcp_server.rs  run_artifacts.rs  server_state.rs  trace_hub.rs  trace_sink_emit.rs
crates/plasm-agent/src/: lib.rs  mcp_main.rs
crates/plasm-agent/tests/: mcp_inbound_oauth_integration.rs  pokeapi_compile_plugin_e2e.rs
crates/plasm-core/: README.md
crates/plasm-core/src/: connect_profile.rs  error_render.rs  prompt_render.rs  schema.rs  symbol_tuning.rs
crates/plasm-core/src/expr_parser/: mod.rs  value.rs
crates/plasm-observability-contracts/: Cargo.toml
crates/plasm-observability-contracts/src/: lib.rs  model.rs  run_artifact.rs
crates/plasm-trace/: Cargo.toml
crates/plasm-trace-sink/: Cargo.toml
crates/plasm-trace-sink/src/: lib.rs  model.rs
crates/plasm-trace/src/: lib.rs  segment.rs  totals.rs
